Fix navbar logo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,12 @@ body {
   color: var(--color-green) !important;
   transition: color 0.2s, background-color 0.2s, transform 0.2s;
 }
+#mainNav .navbar-brand {
+  padding: 0;
+}
 #mainNav .navbar-brand img {
   height: 40px;
+  display: block;
 }
 #mainNav .nav-link:hover,
 #mainNav .navbar-brand:hover {
@@ -29,9 +33,6 @@ body {
   text-underline-offset: 4px;
   transform: scale(1.05);
   font-weight: 700;
-}
-#mainNav .navbar-brand img {
-  height: 40px;
 }
 header.masthead:before {
   background-color: var(--color-gray);
